99-templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: my-app
    type: front-end
  name: nginx
# namespace: research
spec:
  containers:
  - image: nginx
    name: nginx
